VideoDb: Replace PATCH videos with PATCH video
Resolves #159
